2007-04-06  Mark Wielaard  <mark@klomp.org>

	* configure.ac (VERSION): Set to 0.96-pre.

2007-04-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/MBeanAttributeInfo.java:
	(serialVersionUID):  Added.
	* javax/management/MBeanFeatureInfo.java:
	(writeObject(ObjectOutputStream)): Added for
	later 1.6 support.
	* javax/management/Notification.java:
	(serialVersionUID): Added.
	(Notification(String,Object,long,long)): Make
	default message the empty string not null.
	(Notification(String,Object,long,long,String)):
	Set source explicitly.
	(writeObject(ObjectOutputStream)): Added to match
	Sun.
	
2007-04-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/Hashtable.java:
	(putAllInternal(Map)): Remove redundant semi-colon.
	
2007-04-06  Mark Wielaard  <mark@klomp.org>

	* lib/mkcollections.pl.in: Add externalclasses.
	* java/util/Collections.java: Unroll enhanced for loops.
	* java/util/HashMap.java: Likewise.
	* java/util/Hashtable.java: Likewise.
	* java/util/TreeMap.java: Likewise.

2007-04-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/javax/management/Translator.java:
	(getTypeName(type)): Move type name creation to its own method.
	* javax/management/ObjectName.java:
	(WILDCARD): Added.
	
2007-04-04  Andrew Haley  <aph@redhat.com>

	* javax/management/ObjectName.java:
	(serialVersionUID): Declare.
	Make all fields transient.
	(parse): Break out from constructor.
	(writeObject, readObject): New methods.
	
2007-04-05  Francis Kung  <fkung@redhat.com>

	* include/Makefile.am: Remove old entry.

2007-04-05  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/GtkToolkit.java
	(createDragGestureRecognizer): Remove failing subClass call.

2007-04-05  Gary Benson  <gbenson@redhat.com>

	* java/util/GregorianCalendar.java
	(computeFields): Fix WEEK_OF_MONTH calculation.

2007-04-05  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	PR classpath/22800: