@@ -1,3 +1,9 @@
+2007-04-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/ObjectName.java
+	(parse(String)): Fix parsing where the wildcard
+	is juxtaposed between other pairs.
+	
 2007-04-06  Mark Wielaard  <mark@klomp.org>
 
 	* configure.ac (VERSION): Set to 0.96-pre.
